# cmc_mash

./: .gitignore
raytracer/: CMakeLists.txt  Makefile  README.md  build.sh  run.sh
raytracer/inc/: bvh.h  image.h  light.h  material.h  model.h  object.h  options.h  ray.h  renderer.h  scene.h  scene_loader.h  solver.h  timer.h
raytracer/lib/: image.cpp  main.cpp  model.cpp  object.cpp  renderer.cpp  scene.cpp  scene_loader.cpp  solver.cpp
